Added purchase event and navbars

--- a/index.html
+++ b/index.html
@@ -17,6 +17,29 @@
 <body style="background-image: url(images/blue-snow.webp);">
 
     <main>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand">Kyle's Balloon Store</a>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-outline-primary navbar-button"
+                                onclick="location.href='index.html'">Home</button>
+                        </li>
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-outline-primary navbar-button"
+                                onclick="location.href='store.html'">Store</button>
+                        </li>
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-outline-primary navbar-button"
+                                onclick="location.href='newsletter.html'">Newsletter</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
         <div class="vstack gap-4 col-md-5 mx-auto">
             <h1 class="home-title" : 2ch>Welcome to Kyle's Balloon Store!</h1>
             <button type="button" class="btn btn-primary home-button" onclick="location.href='store.html'">Go to our
