cleanup and added thank you page

--- a/newsletter.html
+++ b/newsletter.html
@@ -42,7 +42,7 @@
 
 
         <div class="vstack gap-4 col-md-5 mx-auto">
-            <h1 class="home-title" : 2ch>Thanks for subscribing!</h1>
+            <h1 class="home-title">Thanks for subscribing!</h1>
         </div>
     </main>
 
