--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
         <div class="vstack gap-4 col-md-5 mx-auto">
-            <h1 class="home-title" : 2ch>Welcome to Kyle's Balloon Store!</h1>
+            <h1 class="home-title">Welcome to Kyle's Balloon Store!</h1>
             <button type="button" class="btn btn-primary home-button" onclick="location.href='store.html'">Go to our
                 store!</button>
             <button type="button" class="btn btn-primary home-button"
