--- a/thanks.html
+++ b/thanks.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -35,13 +36,14 @@
                                 onclick="location.href='newsletter.html'">Newsletter</button>
                         </li>
                     </ul>
+                    <button class="btn d-flex" onclick="location.href='debug.html'"><i class="fa fa-bug"></i></button>
                 </div>
             </div>
         </nav>
 
 
         <div class="vstack gap-4 col-md-5 mx-auto">
-            <h1 class="home-title" h>Thanks for Buying our Balloons!</h1>
+            <h1 class="home-title">Thanks for Buying our Balloons!</h1>
             <button type="button" class="btn btn-primary home-button" onclick="location.href='store.html'">Go back to
                 our
                 store!</button>
