--- a/store.html
+++ b/store.html
@@ -51,7 +51,7 @@
                     <label for="balloonCount1" class="form-label">How Many Balloons do you want?</label>
                     <input type="number" class="form-control" id="balloonCount1" aria-describedby="balloonHelp"
                         value="1">
-                    <div id="balloonHelp" class="form-text">We"ll never share your love of balloons with anyone else.
+                    <div id="balloonHelp" class="form-text">We'll never share your love of balloons with anyone else.
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
