added page view via image pixel

--- a/debug.html
+++ b/debug.html
@@ -76,6 +76,9 @@
             <button type="button" class="btn btn-primary home-button" onClick="gtmNewsletterSignupEvent()">
                 GTM Newsletter Signup Event
             </button>
+            <button type="button" class="btn btn-primary home-button" onclick="location.href='image_view.html'">
+                Image Page View
+            </button>
 
         </div>
     </main>
