added pixel events for a different brand

--- a/debug.html
+++ b/debug.html
@@ -79,6 +79,9 @@
             <button type="button" class="btn btn-primary home-button" onclick="location.href='image_view.html'">
                 Image Page View
             </button>
+            <button type="button" class="btn btn-primary home-button" onclick="location.href='alternate_pixel.html'">
+                Emmett's Test Brand
+            </button>
 
         </div>
     </main>
