--- a/debug.html
+++ b/debug.html
@@ -86,7 +86,7 @@
             <button type="button" class="btn btn-danger home-button" onClick="twoPageViewDiffPixel()" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Lumps events under same pixel key when they are fired in tandem">
                 Two Page Views - Different Pixels
             </button>
-            <button type="button" class="btn btn-danger home-button" onClick="emmettsBrandPageView()" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Since my pixel's key was already configured on the initial page view the following conf doesn't update the key in the call to Emmett's brand">
+            <button type="button" class="btn btn-danger home-button" onClick="emmettsBrandPageView()" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Since the first pixel's key was already configured on the initial page view the following conf doesn't update the key when this event fires. So clicking this will send an event to the first pixel.">
                 Fire Page View Emmett's Brand
             </button>
         </div>
