renamed purchase and page view

--- a/debug.html
+++ b/debug.html
@@ -65,6 +65,9 @@
             <button type="button" class="btn btn-primary home-button" onClick="pageViewAlias()">Page View with Alias</button>
             <button type="button" class="btn btn-primary home-button" onClick="aliasConf()">Alias with Conf Set</button>
             <button type="button" class="btn btn-primary home-button" onClick="purchaseEvent()">Purchase Event</button>
+            <button type="button" class="btn btn-primary home-button" onClick="viewAndPurchaseEvent()">
+                View and Purchase Event
+            </button>
             <button type="button" class="btn btn-primary home-button" onClick="newsletterSignupEvent()">
                 Newsletter Signup Event
             </button>
@@ -76,9 +79,6 @@
             </button>
             <button type="button" class="btn btn-primary home-button" onClick="gtmPurchaseEvent()">
                 GTM Purchase Event
-            </button>
-            <button type="button" class="btn btn-primary home-button" onClick="viewAndPurchaseEvent()">
-                GTM View and Purchase Event
             </button>
             <button type="button" class="btn btn-primary home-button" onClick="gtmNewsletterSignupEvent()">
                 GTM Newsletter Signup Event
