--- a/debug.html
+++ b/debug.html
@@ -86,6 +86,9 @@
             <button type="button" class="btn btn-primary home-button" onclick="location.href='image_view.html'">
                 Image Page View
             </button>
+            <button type="button" class="btn btn-primary home-button" onclick="location.href='image_purchase.html'">
+                Image Purchase
+            </button>
             <button type="button" class="btn btn-primary home-button" onclick="location.href='alternate_pixel.html'">
                 Emmett's Test Brand
             </button>
