Added embedded play test page

--- a/debug.html
+++ b/debug.html
@@ -110,6 +110,9 @@
             <button type="button" class="btn btn-primary home-button" onclick="location.href='purchase_without_conf.html'">
                 Purchase without Conf
             </button>
+            <button type="button" class="btn btn-primary home-button" onclick="location.href='embedded_player.html'">
+                Embeddable Player
+            </button>
         </div>
     </main>
 
