--- a/embedded_player.html
+++ b/embedded_player.html
@@ -18,7 +18,7 @@
 <body style="background-image: url(images/blue-snow.webp);">
 
     <main>
-        <iframe frameborder="0" src="https://playlist.megaphone.fm/?p=KBS1450784108" width="100%" height="482"></iframe>=
+        <iframe frameborder="0" src="https://playlist.megaphone.fm/?p=DEV2649455212" width="100%" height="482"></iframe>    
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
